# QMC_IsingModel

./: .gitignore  Ising MC.tex
IsingModel/: CMakeLists.txt  IsingModel.sln  contribution.txt  data.opju
IsingModel/CPUTest/: CMakeLists.txt  CPUTest.cpp  CPUTest.vcxproj  CPUTest.vcxproj.filters
IsingModel/IsingModel/: CMakeLists.txt  IsingModel.cu  IsingModel.vcxproj
IsingModel/Visualization/: CMakeLists.txt  Visualization.cpp  Visualization.vcxproj  Visualization.vcxproj.filters
IsingModel/Visualization/shaders/: EndPointsRendererVertex0.cpp  KinkLinesRendererVertex.cpp  KinkLinesRendererVertex0.cpp  ShaderLists.txt  SpinLinesRendererVertex0.cpp  SpinsRendererVertex0.cpp
IsingModel/results/: 128 10k 50k.txt  64 10k 50k.txt  cor 128 10k 20k.txt  cor 64 10k 20k.txt  cor.txt  down 128 10k 50k.txt  down 64  10k 50k.txt
papers/: CUDA.html  Monte Carlo Methods Theory.html  Worm-Algo-HK.ppt
papers/2005.10066/: QTFI.tex
papers/Monte Carlo Methods Theory_files/: button.php
report/: report.tex
slides/: figs  slides.tex
